--- a/public/css/LayoutStyle.css
+++ b/public/css/LayoutStyle.css
@@ -34,6 +34,12 @@
     background-color: whitesmoke !important;
 }
 
+.badge.bg-primary {
+    color: whitesmoke !important;
+    border-color: #5e3d0d !important;
+    background-color: #5e3d0d !important;
+}
+
 .profile-img {
     width: 50px;
     height: 50px;
